--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
+### Jekyll ###
 _site
 .sass-cache
 .jekyll-metadata
+Gemfile.lock
+
+### Gulp ###
+package.json
+/node_modules/
+
+### MacOS ###
+*.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
