--- a/_config.yml
+++ b/_config.yml
@@ -13,21 +13,26 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Across the Universe.
+title: Across the Universe
 email: darren.nam@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  My playground.
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+  This is my playground. And This is some extra description.
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username:
+twitter_username: jekyllrb
 github_username:  naduhy2
 
 # Build settings
+permalink: date
 markdown: kramdown
-theme: minima
 plugins:
   - jekyll-feed
 
+defaults:
+  - scope:
+      path: "assets/img"
+    values:
+      image: true
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
