--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,10 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  naduhy2
+google_analytics: UA-129096911-1
 
 # Build settings
-permalink: date
+permalink: /:year/:month/:title:output_ext
 markdown: kramdown
 plugins:
   - jekyll-feed
