--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,14 @@ email: darren.nam@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is my playground. And This is some extra description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://naduhy2.github.io/blog/" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  naduhy2
 google_analytics: UA-129096911-1
 
 # Build settings
 permalink: /:year/:month/:title:output_ext
 markdown: kramdown
+highlighter: pygments
 plugins:
   - jekyll-feed
 
