--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Across the Universe.
 email: darren.nam@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is my playground. And This is some extra description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://naduhy2.github.io/blog/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "https://naduhy2.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  naduhy2
 google_analytics: UA-129096911-1
 
