--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: darren.nam@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is my playground. And This is some extra description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "/blog/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 timezone: Asia/Seoul
 github_username:  naduhy2
 google_analytics: UA-129096911-1
@@ -29,12 +29,21 @@ markdown: kramdown
 highlighter: rouge
 plugins:
   - jekyll-feed
+collections:
+  category:
+    output: true
+    permalink: /category/:path/
 
 defaults:
   - scope:
       path: "assets/img"
     values:
       image: true
+  - scope:
+      path: ''
+      type: category
+    values:
+      layout: category
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
