--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: Across the Universe.
 description: >- # this means to ignore newlines until "baseurl:"
-  This is my playground. And This is some extra description.
+  This is my playground.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "http://naduhy2.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 timezone: Asia/Seoul
